2005-11-28  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangletool.c: don't crash when
	user modifies width/height of nonexistent rectangle, and
	make sure to disconnect option notify handlers in dispose.
	Should fix bug #322396.

2005-11-27  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdeviceinfo.[ch]: added GdkDisplay member since
	there is no way fo figure the display a GdkDevice exists on.
	Minor cleanups.

	* app/widgets/gimpdevices.[ch]: connect to the GdkDeviceManager
	and add input devices when displays are opened. Added API to get
	the GimpContainer of devices.

	* app/widgets/gimpdevicestatus.[ch]: don't just show the devices
	of the default display. Instead get the device container from the
	new API above and update the GUI when devices are added/removed.
	Cleaned up the whole file quite a bit.

2005-11-27  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdeviceinfo.c (gimp_device_info_get_property):
	use gtk_accelerator_name() instead of serializing the accelerator
	manually.

2005-11-27  Michael Natterer  <mitch@gimp.org>

	Apparently, there was a reason for implementing the window actions
	separately for views and docks, fixed the bugs resulting from the
	merge:

	* app/actions/dock-actions.c (dock_actions_update): only update
	the dock actions if the update function is called in the context
	of a dock (not in the context of an image window). Fixes docks
	jumping to other screens on any action on an image window on that
	screen.

	* app/actions/view-actions.c (view_actions_setup): add the window
	actions only to action groups that live in an image window or
	global popup ui manager (not to action groups that belong to a
	dock or dockable). Prevents bugs similar to the one above.

2005-11-26  Michael Natterer  <mitch@gimp.org>

	* app/menus/window-menu.c (window_menu_display_opened,closed):
	don't crash if gdk_display_get_name() returns NULL.

2005-11-26  Michael Natterer  <mitch@gimp.org>
